force-app/main/default/objects/BOT_Plan_Product__c/BOT_Plan_Product__c.object-meta.xml
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is used to store the Plan product information and having a lookup relationship with Account.</description>
    <label>Plan Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>