force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Account__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account__c</fullName>
    <description>Master-detail relationship to Account</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plan Products</relationshipLabel>
    <relationshipName>Plan_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>