force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Channel__c.field-meta.xml
<CustomField>
    <fullName>BOT_Channel__c</fullName>
    <description>Used to store the selection channel</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>PBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>