force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Formulary_Type_Used__c.field-meta.xml
<CustomField>
    <fullName>BOT_Formulary_Type_Used__c</fullName>
    <description>Used to store the Formulary type used for this product</description>
    <label>Formulary Type Used</label>
    <length>80</length>
    <type>Text</type>
</CustomField>