force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Medical_Admin__c.field-meta.xml
<CustomField>
    <fullName>BOT_Medical_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Account. This field represents the medical administrator.</description>
    <label>Medical Admin</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plan Products (Medical Admin)</relationshipLabel>
    <relationshipName>Medical_Admin</relationshipName>
    <type>Lookup</type>
</CustomField>