force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Medical_Admin_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Medical_Admin_ID__c</fullName>
    <description>To store the BOT medical admin ID(Entity ID). It is used for BOT internal reference only.</description>
    <label>Medical Admin ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>