force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Product_ID__c</fullName>
    <description>To store BOT Product ID. This field is used as external ID</description>
    <externalId>true</externalId>
    <label>Product ID</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>