force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Product_Lives__c.field-meta.xml
<CustomField>
    <fullName>BOT_Product_Lives__c</fullName>
    <description>Used to store the total lives covered by this product.</description>
    <label>Product Lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>