force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>BOT_Product_Name__c</fullName>
    <description>This field is used to store the name field value. Because Plan product name contains more than 80 characters. But the standard name field allows a maximum of 80 characters only. So we are using this field to store the complete name. A workflow rule is used to update the standard name field by using this field value.</description>
    <label>Product Name Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>