force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>BOT_Product_Type__c</fullName>
    <description>Used to store the product type</description>
    <label>Product Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>