force-app/main/default/objects/BOT_Plan_Product__c/fields/BOT_Product_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Product_Type_ID__c</fullName>
    <description>Used to store BOT product type ID</description>
    <label>Product Type ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>